<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.Sun">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="243dp"
        android:layout_height="128dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/Sun_Moon"
        android:src="@drawable/sun" />

    <TextView
        android:id="@+id/firstView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="180dp"
        android:text="@string/sunrise"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/secondView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="280dp"
        android:text="@string/sunset"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/thirdView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="370dp"
        android:text="@string/twilight_evening"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fourthView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="450dp"
        android:text="@string/twilight_morning"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/firstAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="180dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/secondAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="280dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/thirdAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="370dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fourthAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="450dp"
        android:textSize="20sp"
        android:textStyle="bold" />

</FrameLayout>